--- a/css/styles.css
+++ b/css/styles.css
@@ -2470,36 +2470,37 @@ body {
 }
 /* line 43, ../sass/_varisco.scss */
 .section-studio p {
-  margin-left: 2em;
-  margin-right: 2em;
+  margin-left: auto;
+  margin-right: auto;
+  width: 550px;
 }
-/* line 47, ../sass/_varisco.scss */
+/* line 48, ../sass/_varisco.scss */
 .section-studio p.studio-page-image {
   margin: 0;
 }
 
-/* line 52, ../sass/_varisco.scss */
+/* line 53, ../sass/_varisco.scss */
 .field-name-field-project-description {
   border-top: 1px solid #9C9A9A;
   border-bottom: 1px solid #9C9A9A;
   color: #494849;
 }
 
-/* line 57, ../sass/_varisco.scss */
+/* line 58, ../sass/_varisco.scss */
 .view-project-client {
   text-transform: uppercase;
 }
-/* line 59, ../sass/_varisco.scss */
+/* line 60, ../sass/_varisco.scss */
 .view-project-client a {
   color: #DA6A27;
 }
 
-/* line 63, ../sass/_varisco.scss */
+/* line 64, ../sass/_varisco.scss */
 #block-block-1 {
   font-size: 1em;
   padding-left: 10px;
 }
-/* line 66, ../sass/_varisco.scss */
+/* line 67, ../sass/_varisco.scss */
 #block-block-1 p {
   color: #494849;
   font-weight: bold;
@@ -2507,20 +2508,20 @@ body {
   margin: 0;
   padding: 0;
 }
-/* line 73, ../sass/_varisco.scss */
+/* line 74, ../sass/_varisco.scss */
 #block-block-1 .studio-address {
   font-size: 0.75em;
 }
-/* line 80, ../sass/_varisco.scss */
+/* line 81, ../sass/_varisco.scss */
 #block-block-1 .studio-email a {
   color: #C15D21;
 }
 
-/* line 86, ../sass/_varisco.scss */
+/* line 87, ../sass/_varisco.scss */
 #block-system-main-menu h2 {
   display: none;
 }
-/* line 89, ../sass/_varisco.scss */
+/* line 90, ../sass/_varisco.scss */
 #block-system-main-menu ul {
   font-size: 4em;
   font-size: 4.5vw;
@@ -2529,58 +2530,58 @@ body {
   padding: 0 0 0 10px;
   text-transform: uppercase;
 }
-/* line 97, ../sass/_varisco.scss */
+/* line 98, ../sass/_varisco.scss */
 #block-system-main-menu ul li {
   list-style: none;
   list-style-position: outside;
 }
-/* line 100, ../sass/_varisco.scss */
+/* line 101, ../sass/_varisco.scss */
 #block-system-main-menu ul li a {
   color: #717272;
   text-decoration: none;
 }
-/* line 104, ../sass/_varisco.scss */
+/* line 105, ../sass/_varisco.scss */
 #block-system-main-menu ul li a:hover, #block-system-main-menu ul li a.active-trail {
   color: #DA6A27;
 }
 
-/* line 111, ../sass/_varisco.scss */
+/* line 112, ../sass/_varisco.scss */
 .mean-container .mean-bar {
   background: none repeat scroll 0 0 transparent;
 }
-/* line 114, ../sass/_varisco.scss */
+/* line 115, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 116, ../sass/_varisco.scss */
+/* line 117, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span {
   background: none repeat scroll 0 0 #FFFFFF;
   display: block;
 }
-/* line 120, ../sass/_varisco.scss */
+/* line 121, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span.mean-head {
   background: none repeat scroll 0 0 transparent;
   color: #FFFFFF;
 }
-/* line 125, ../sass/_varisco.scss */
+/* line 126, ../sass/_varisco.scss */
 .mean-container .mean-nav {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 127, ../sass/_varisco.scss */
+/* line 128, ../sass/_varisco.scss */
 .mean-container .mean-nav h2 {
   color: #FFFFFF;
 }
-/* line 130, ../sass/_varisco.scss */
+/* line 131, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a {
   background: none repeat scroll 0 0 #717272;
   color: #FFFFFF;
 }
-/* line 134, ../sass/_varisco.scss */
+/* line 135, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a:hover {
   background: none repeat scroll 0 0 #717272;
   color: #DA6A27;
 }
-/* line 138, ../sass/_varisco.scss */
+/* line 139, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a.mean-expand:hover {
   background: none repeat scroll 0 0 #717272;
 }
