--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -41,8 +41,9 @@ body {
     display: none;
   }
   p {
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-left: auto;
+    margin-right: auto;
+    width: 550px;
   }  
   p.studio-page-image {
     margin: 0;
