--- a/css/styles.css
+++ b/css/styles.css
@@ -2477,30 +2477,31 @@ body {
 /* line 48, ../sass/_varisco.scss */
 .section-studio p.studio-page-image {
   margin: 0;
+  width: auto;
 }
 
-/* line 53, ../sass/_varisco.scss */
+/* line 54, ../sass/_varisco.scss */
 .field-name-field-project-description {
   border-top: 1px solid #9C9A9A;
   border-bottom: 1px solid #9C9A9A;
   color: #494849;
 }
 
-/* line 58, ../sass/_varisco.scss */
+/* line 59, ../sass/_varisco.scss */
 .view-project-client {
   text-transform: uppercase;
 }
-/* line 60, ../sass/_varisco.scss */
+/* line 61, ../sass/_varisco.scss */
 .view-project-client a {
   color: #DA6A27;
 }
 
-/* line 64, ../sass/_varisco.scss */
+/* line 65, ../sass/_varisco.scss */
 #block-block-1 {
   font-size: 1em;
   padding-left: 10px;
 }
-/* line 67, ../sass/_varisco.scss */
+/* line 68, ../sass/_varisco.scss */
 #block-block-1 p {
   color: #494849;
   font-weight: bold;
@@ -2508,20 +2509,20 @@ body {
   margin: 0;
   padding: 0;
 }
-/* line 74, ../sass/_varisco.scss */
+/* line 75, ../sass/_varisco.scss */
 #block-block-1 .studio-address {
   font-size: 0.75em;
 }
-/* line 81, ../sass/_varisco.scss */
+/* line 82, ../sass/_varisco.scss */
 #block-block-1 .studio-email a {
   color: #C15D21;
 }
 
-/* line 87, ../sass/_varisco.scss */
+/* line 88, ../sass/_varisco.scss */
 #block-system-main-menu h2 {
   display: none;
 }
-/* line 90, ../sass/_varisco.scss */
+/* line 91, ../sass/_varisco.scss */
 #block-system-main-menu ul {
   font-size: 4em;
   font-size: 4.5vw;
@@ -2530,58 +2531,58 @@ body {
   padding: 0 0 0 10px;
   text-transform: uppercase;
 }
-/* line 98, ../sass/_varisco.scss */
+/* line 99, ../sass/_varisco.scss */
 #block-system-main-menu ul li {
   list-style: none;
   list-style-position: outside;
 }
-/* line 101, ../sass/_varisco.scss */
+/* line 102, ../sass/_varisco.scss */
 #block-system-main-menu ul li a {
   color: #717272;
   text-decoration: none;
 }
-/* line 105, ../sass/_varisco.scss */
+/* line 106, ../sass/_varisco.scss */
 #block-system-main-menu ul li a:hover, #block-system-main-menu ul li a.active-trail {
   color: #DA6A27;
 }
 
-/* line 112, ../sass/_varisco.scss */
+/* line 113, ../sass/_varisco.scss */
 .mean-container .mean-bar {
   background: none repeat scroll 0 0 transparent;
 }
-/* line 115, ../sass/_varisco.scss */
+/* line 116, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 117, ../sass/_varisco.scss */
+/* line 118, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span {
   background: none repeat scroll 0 0 #FFFFFF;
   display: block;
 }
-/* line 121, ../sass/_varisco.scss */
+/* line 122, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span.mean-head {
   background: none repeat scroll 0 0 transparent;
   color: #FFFFFF;
 }
-/* line 126, ../sass/_varisco.scss */
+/* line 127, ../sass/_varisco.scss */
 .mean-container .mean-nav {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 128, ../sass/_varisco.scss */
+/* line 129, ../sass/_varisco.scss */
 .mean-container .mean-nav h2 {
   color: #FFFFFF;
 }
-/* line 131, ../sass/_varisco.scss */
+/* line 132, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a {
   background: none repeat scroll 0 0 #717272;
   color: #FFFFFF;
 }
-/* line 135, ../sass/_varisco.scss */
+/* line 136, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a:hover {
   background: none repeat scroll 0 0 #717272;
   color: #DA6A27;
 }
-/* line 139, ../sass/_varisco.scss */
+/* line 140, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a.mean-expand:hover {
   background: none repeat scroll 0 0 #717272;
 }
