--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -49,7 +49,11 @@ $zen-auto-include-item-base: false;
   // See the note about $zen-auto-include-item-base above.
   @include zen-grid-item-base();
 }
-
+.region-sidebar-first {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 /* Containers for grid items and flow items. */
 #header,
 #main,
@@ -59,6 +63,7 @@ $zen-auto-include-item-base: false;
  .masonry-item {
     padding: 10px;
     width: 100%;
+    text-align: center;
   }
 
 /* Navigation bar */
@@ -89,8 +94,12 @@ $zen-auto-include-item-base: false;
     padding: 10px;
     width: 40%;
   }
- 
-  #page {
+  .region-sidebar-first {
+    position: relative;
+    top: auto;
+    left: auto;
+  }
+   #page {
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 20px;
@@ -240,6 +249,11 @@ $zen-auto-include-item-base: false;
   }
   #main {
     padding-top: 1em;
+  }
+  .region-sidebar-first {
+    position: relative;
+    top: auto;
+    left: auto;
   }
   .region-highlighted {
   //  @include zen-grid-container($context: none);
