moved sidebar block to responsive

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -109,6 +109,38 @@ $zen-auto-include-item-base: false;
   #main {
     padding-top: 1em;
   }
+  .header__site-name {
+    font-size: 1em;
+    font-size: 1vw;
+    line-height: 1em;
+    font-weight: normal;
+    margin-bottom: 0.5em; 
+  }
+  #block-block-1 {
+  font-size: 1em;
+  font-size: 1vw;
+  padding-left: 10px;
+    p {
+      color: $dark-gray;
+      font-weight: bold;
+      line-height: 1.25em;
+      margin: 0;
+      padding: 0;
+    }
+    .studio-address {
+      font-size: 0.74em;
+      font-size: 0.74vw;
+    }
+    .studio-phone {
+
+    }
+    .studio-email {
+      a {
+        color: $med-orange;
+      }
+    }
+  }
+
   /**
    * The layout when there is only one sidebar, the left one.
    */
@@ -254,6 +286,37 @@ $zen-auto-include-item-base: false;
     position: relative;
     top: auto;
     left: auto;
+  }
+  .header__site-name {
+    font-size: 1em;
+    font-size: 1vw;
+    line-height: 1em;
+    font-weight: normal;
+    margin-bottom: 0.5em; 
+  }
+  #block-block-1 {
+  font-size: 1em;
+  font-size: 1vw;
+  padding-left: 10px;
+    p {
+      color: $dark-gray;
+      font-weight: bold;
+      line-height: 1.25em;
+      margin: 0;
+      padding: 0;
+    }
+    .studio-address {
+      font-size: 0.74em;
+      font-size: 0.74vw;
+    }
+    .studio-phone {
+
+    }
+    .studio-email {
+      a {
+        color: $med-orange;
+      }
+    }
   }
   .region-highlighted {
   //  @include zen-grid-container($context: none);
