--- a/css/styles.css
+++ b/css/styles.css
@@ -716,15 +716,48 @@ table {
     padding-top: 1em;
   }
 
+  /* line 112, ../sass/layouts/_responsive.scss */
+  .header__site-name {
+    font-size: 1em;
+    font-size: 1vw;
+    line-height: 1em;
+    font-weight: normal;
+    margin-bottom: 0.5em;
+  }
+
+  /* line 119, ../sass/layouts/_responsive.scss */
+  #block-block-1 {
+    font-size: 1em;
+    font-size: 1vw;
+    padding-left: 10px;
+  }
+  /* line 123, ../sass/layouts/_responsive.scss */
+  #block-block-1 p {
+    color: #494849;
+    font-weight: bold;
+    line-height: 1.25em;
+    margin: 0;
+    padding: 0;
+  }
+  /* line 130, ../sass/layouts/_responsive.scss */
+  #block-block-1 .studio-address {
+    font-size: 0.74em;
+    font-size: 0.74vw;
+  }
+  /* line 138, ../sass/layouts/_responsive.scss */
+  #block-block-1 .studio-email a {
+    color: #C15D21;
+  }
+
   /**
    * The layout when there is only one sidebar, the left one.
    */
-  /* line 115, ../sass/layouts/_responsive.scss */
+  /* line 147, ../sass/layouts/_responsive.scss */
   .sidebar-first {
     /* Span 2 columns, starting in 2nd column from left. */
     /* Span 1 column, starting in 1st column from left. */
   }
-  /* line 117, ../sass/layouts/_responsive.scss */
+  /* line 149, ../sass/layouts/_responsive.scss */
   .sidebar-first #content {
     float: left;
     width: 66.66667%;
@@ -739,7 +772,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 122, ../sass/layouts/_responsive.scss */
+  /* line 154, ../sass/layouts/_responsive.scss */
   .sidebar-first .region-sidebar-first {
     float: left;
     width: 33.33333%;
@@ -758,12 +791,12 @@ table {
   /**
    * The layout when there is only one sidebar, the right one.
    */
-  /* line 130, ../sass/layouts/_responsive.scss */
+  /* line 162, ../sass/layouts/_responsive.scss */
   .sidebar-second {
     /* Span 2 columns, starting in 1st column from left. */
     /* Span 1 column, starting in 3rd column from left. */
   }
-  /* line 132, ../sass/layouts/_responsive.scss */
+  /* line 164, ../sass/layouts/_responsive.scss */
   .sidebar-second #content {
     float: left;
     width: 66.66667%;
@@ -778,7 +811,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 137, ../sass/layouts/_responsive.scss */
+  /* line 169, ../sass/layouts/_responsive.scss */
   .sidebar-second .region-sidebar-second {
     float: left;
     width: 33.33333%;
@@ -797,13 +830,13 @@ table {
   /**
    * The layout when there are two sidebars.
    */
-  /* line 145, ../sass/layouts/_responsive.scss */
+  /* line 177, ../sass/layouts/_responsive.scss */
   .two-sidebars {
     /* Span 2 columns, starting in 2nd column from left. */
     /* Span 1 column, starting in 1st column from left. */
     /* Start a new row and span all 3 columns. */
   }
-  /* line 147, ../sass/layouts/_responsive.scss */
+  /* line 179, ../sass/layouts/_responsive.scss */
   .two-sidebars #content {
     float: left;
     width: 66.66667%;
@@ -818,7 +851,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 152, ../sass/layouts/_responsive.scss */
+  /* line 184, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-first {
     float: left;
     width: 33.33333%;
@@ -833,7 +866,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 157, ../sass/layouts/_responsive.scss */
+  /* line 189, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second {
     float: left;
     width: 100%;
@@ -864,7 +897,7 @@ table {
   .two-sidebars .region-sidebar-second:after {
     clear: both;
   }
-  /* line 163, ../sass/layouts/_responsive.scss */
+  /* line 195, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second .block {
     padding-left: 10px;
     padding-right: 10px;
@@ -874,7 +907,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 167, ../sass/layouts/_responsive.scss */
+  /* line 199, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second .block:nth-child(3n+1) {
     float: left;
     width: 33.33333%;
@@ -890,7 +923,7 @@ table {
     *word-wrap: break-word;
     clear: left;
   }
-  /* line 172, ../sass/layouts/_responsive.scss */
+  /* line 204, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second .block:nth-child(3n+2) {
     float: left;
     width: 33.33333%;
@@ -905,7 +938,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 176, ../sass/layouts/_responsive.scss */
+  /* line 208, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second .block:nth-child(3n) {
     float: left;
     width: 33.33333%;
@@ -921,7 +954,7 @@ table {
     *word-wrap: break-word;
   }
 
-  /* line 182, ../sass/layouts/_responsive.scss */
+  /* line 214, ../sass/layouts/_responsive.scss */
   .views-responsive-grid {
     padding-left: 10px;
     padding-right: 10px;
@@ -943,12 +976,12 @@ table {
     clear: both;
   }
 
-  /* line 187, ../sass/layouts/_responsive.scss */
+  /* line 219, ../sass/layouts/_responsive.scss */
   .views-responsive-grid .views-row {
     clear: left;
   }
 
-  /* line 190, ../sass/layouts/_responsive.scss */
+  /* line 222, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-2 {
     *position: relative;
     *zoom: 1;
@@ -966,7 +999,7 @@ table {
   .views-responsive-grid.views-columns-2:after {
     clear: both;
   }
-  /* line 193, ../sass/layouts/_responsive.scss */
+  /* line 225, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-2 .views-column-1 {
     float: left;
     width: 50%;
@@ -981,7 +1014,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 196, ../sass/layouts/_responsive.scss */
+  /* line 228, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-2 .views-column-2 {
     float: left;
     width: 50%;
@@ -997,7 +1030,7 @@ table {
     *word-wrap: break-word;
   }
 
-  /* line 200, ../sass/layouts/_responsive.scss */
+  /* line 232, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 {
     *position: relative;
     *zoom: 1;
@@ -1015,7 +1048,7 @@ table {
   .views-responsive-grid.views-columns-3:after {
     clear: both;
   }
-  /* line 203, ../sass/layouts/_responsive.scss */
+  /* line 235, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 .views-column-1 {
     float: left;
     width: 33.33333%;
@@ -1030,7 +1063,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 206, ../sass/layouts/_responsive.scss */
+  /* line 238, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 .views-column-2 {
     float: left;
     width: 33.33333%;
@@ -1045,7 +1078,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 209, ../sass/layouts/_responsive.scss */
+  /* line 241, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 .views-column-3 {
     float: left;
     width: 33.33333%;
@@ -1061,7 +1094,7 @@ table {
     *word-wrap: break-word;
   }
 
-  /* line 213, ../sass/layouts/_responsive.scss */
+  /* line 245, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 {
     *position: relative;
     *zoom: 1;
@@ -1084,7 +1117,7 @@ table {
   .views-responsive-grid.views-columns-4:after {
     clear: both;
   }
-  /* line 217, ../sass/layouts/_responsive.scss */
+  /* line 249, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-1 {
     float: left;
     width: 50%;
@@ -1099,7 +1132,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 220, ../sass/layouts/_responsive.scss */
+  /* line 252, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-2 {
     float: left;
     width: 50%;
@@ -1114,7 +1147,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 223, ../sass/layouts/_responsive.scss */
+  /* line 255, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-3 {
     float: left;
     width: 50%;
@@ -1130,7 +1163,7 @@ table {
     *word-wrap: break-word;
     clear: left;
   }
-  /* line 227, ../sass/layouts/_responsive.scss */
+  /* line 259, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-4 {
     float: left;
     width: 50%;
@@ -1150,13 +1183,13 @@ table {
  * Use 5 grid columns for larger screens.
  */
 @media all and (min-width: 960px) {
-  /* line 239, ../sass/layouts/_responsive.scss */
+  /* line 271, ../sass/layouts/_responsive.scss */
   .masonry-item {
     padding: 10px;
     width: 20%;
   }
 
-  /* line 243, ../sass/layouts/_responsive.scss */
+  /* line 275, ../sass/layouts/_responsive.scss */
   #page {
     margin-left: 20px;
     margin-right: 20px;
@@ -1164,27 +1197,60 @@ table {
     margin-top: 20px;
   }
 
-  /* line 250, ../sass/layouts/_responsive.scss */
+  /* line 282, ../sass/layouts/_responsive.scss */
   #main {
     padding-top: 1em;
   }
 
-  /* line 253, ../sass/layouts/_responsive.scss */
+  /* line 285, ../sass/layouts/_responsive.scss */
   .region-sidebar-first {
     position: relative;
     top: auto;
     left: auto;
   }
 
+  /* line 290, ../sass/layouts/_responsive.scss */
+  .header__site-name {
+    font-size: 1em;
+    font-size: 1vw;
+    line-height: 1em;
+    font-weight: normal;
+    margin-bottom: 0.5em;
+  }
+
+  /* line 297, ../sass/layouts/_responsive.scss */
+  #block-block-1 {
+    font-size: 1em;
+    font-size: 1vw;
+    padding-left: 10px;
+  }
+  /* line 301, ../sass/layouts/_responsive.scss */
+  #block-block-1 p {
+    color: #494849;
+    font-weight: bold;
+    line-height: 1.25em;
+    margin: 0;
+    padding: 0;
+  }
+  /* line 308, ../sass/layouts/_responsive.scss */
+  #block-block-1 .studio-address {
+    font-size: 0.74em;
+    font-size: 0.74vw;
+  }
+  /* line 316, ../sass/layouts/_responsive.scss */
+  #block-block-1 .studio-email a {
+    color: #C15D21;
+  }
+
   /**
    * The layout when there is only one sidebar, the left one.
    */
-  /* line 266, ../sass/layouts/_responsive.scss */
+  /* line 329, ../sass/layouts/_responsive.scss */
   .sidebar-first {
     /* Span 4 columns, starting in 2nd column from left. */
     /* Span 1 column, starting in 1st column from left. */
   }
-  /* line 268, ../sass/layouts/_responsive.scss */
+  /* line 331, ../sass/layouts/_responsive.scss */
   .sidebar-first #content {
     float: left;
     width: 80%;
@@ -1199,7 +1265,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 273, ../sass/layouts/_responsive.scss */
+  /* line 336, ../sass/layouts/_responsive.scss */
   .sidebar-first .region-sidebar-first {
     position: fixed;
     float: left;
@@ -1219,12 +1285,12 @@ table {
   /**
    * The layout when there is only one sidebar, the right one.
    */
-  /* line 282, ../sass/layouts/_responsive.scss */
+  /* line 345, ../sass/layouts/_responsive.scss */
   .sidebar-second {
     /* Span 4 columns, starting in 1st column from left. */
     /* Span 1 column, starting in 5th column from left. */
   }
-  /* line 284, ../sass/layouts/_responsive.scss */
+  /* line 347, ../sass/layouts/_responsive.scss */
   .sidebar-second #content {
     float: left;
     width: 80%;
@@ -1239,7 +1305,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 289, ../sass/layouts/_responsive.scss */
+  /* line 352, ../sass/layouts/_responsive.scss */
   .sidebar-second .region-sidebar-second {
     float: left;
     width: 20%;
@@ -1258,13 +1324,13 @@ table {
   /**
    * The layout when there are two sidebars.
    */
-  /* line 297, ../sass/layouts/_responsive.scss */
+  /* line 360, ../sass/layouts/_responsive.scss */
   .two-sidebars {
     /* Span 3 columns, starting in 2nd column from left. */
     /* Span 1 column, starting in 1st column from left. */
     /* Span 1 column, starting in 5th column from left. */
   }
-  /* line 299, ../sass/layouts/_responsive.scss */
+  /* line 362, ../sass/layouts/_responsive.scss */
   .two-sidebars #content {
     float: left;
     width: 60%;
@@ -1279,7 +1345,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 304, ../sass/layouts/_responsive.scss */
+  /* line 367, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-first {
     float: left;
     width: 20%;
@@ -1294,7 +1360,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 309, ../sass/layouts/_responsive.scss */
+  /* line 372, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second {
     float: left;
     width: 20%;
@@ -1310,7 +1376,7 @@ table {
     *word-wrap: break-word;
   }
 
-  /* line 314, ../sass/layouts/_responsive.scss */
+  /* line 377, ../sass/layouts/_responsive.scss */
   .views-responsive-grid {
     padding-left: 10px;
     padding-right: 10px;
@@ -1332,12 +1398,12 @@ table {
     clear: both;
   }
 
-  /* line 319, ../sass/layouts/_responsive.scss */
+  /* line 382, ../sass/layouts/_responsive.scss */
   .views-responsive-grid .views-row {
     clear: left;
   }
 
-  /* line 322, ../sass/layouts/_responsive.scss */
+  /* line 385, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-2 {
     *position: relative;
     *zoom: 1;
@@ -1355,7 +1421,7 @@ table {
   .views-responsive-grid.views-columns-2:after {
     clear: both;
   }
-  /* line 325, ../sass/layouts/_responsive.scss */
+  /* line 388, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-2 .views-column-1 {
     float: left;
     width: 50%;
@@ -1370,7 +1436,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 328, ../sass/layouts/_responsive.scss */
+  /* line 391, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-2 .views-column-2 {
     float: left;
     width: 50%;
@@ -1386,7 +1452,7 @@ table {
     *word-wrap: break-word;
   }
 
-  /* line 332, ../sass/layouts/_responsive.scss */
+  /* line 395, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 {
     *position: relative;
     *zoom: 1;
@@ -1404,7 +1470,7 @@ table {
   .views-responsive-grid.views-columns-3:after {
     clear: both;
   }
-  /* line 335, ../sass/layouts/_responsive.scss */
+  /* line 398, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 .views-column-1 {
     float: left;
     width: 33.33333%;
@@ -1419,7 +1485,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 338, ../sass/layouts/_responsive.scss */
+  /* line 401, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 .views-column-2 {
     float: left;
     width: 33.33333%;
@@ -1434,7 +1500,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 341, ../sass/layouts/_responsive.scss */
+  /* line 404, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 .views-column-3 {
     float: left;
     width: 33.33333%;
@@ -1450,7 +1516,7 @@ table {
     *word-wrap: break-word;
   }
 
-  /* line 345, ../sass/layouts/_responsive.scss */
+  /* line 408, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 {
     *position: relative;
     *zoom: 1;
@@ -1468,7 +1534,7 @@ table {
   .views-responsive-grid.views-columns-4:after {
     clear: both;
   }
-  /* line 349, ../sass/layouts/_responsive.scss */
+  /* line 412, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-1 {
     float: left;
     width: 25%;
@@ -1483,7 +1549,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 352, ../sass/layouts/_responsive.scss */
+  /* line 415, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-2 {
     float: left;
     width: 25%;
@@ -1498,7 +1564,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 355, ../sass/layouts/_responsive.scss */
+  /* line 418, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-3 {
     float: left;
     width: 25%;
@@ -1513,7 +1579,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 358, ../sass/layouts/_responsive.scss */
+  /* line 421, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-4 {
     float: left;
     width: 25%;
@@ -2472,7 +2538,7 @@ body {
 }
 
 /* line 16, ../sass/_varisco.scss */
-.header__site-name, #block-system-main-menu h2 {
+#block-system-main-menu h2 {
   font-size: 1em;
   font-size: 1vw;
   line-height: 1em;
@@ -2535,35 +2601,11 @@ body {
   color: #DA6A27;
 }
 
-/* line 64, ../sass/_varisco.scss */
-#block-block-1 {
-  font-size: 1em;
-  font-size: 1vw;
-  padding-left: 10px;
-}
-/* line 68, ../sass/_varisco.scss */
-#block-block-1 p {
-  color: #494849;
-  font-weight: bold;
-  line-height: 1.25em;
-  margin: 0;
-  padding: 0;
-}
-/* line 75, ../sass/_varisco.scss */
-#block-block-1 .studio-address {
-  font-size: 0.74em;
-  font-size: 0.74vw;
-}
-/* line 83, ../sass/_varisco.scss */
-#block-block-1 .studio-email a {
-  color: #C15D21;
-}
-
-/* line 89, ../sass/_varisco.scss */
+/* line 65, ../sass/_varisco.scss */
 #block-system-main-menu h2 {
   display: none;
 }
-/* line 92, ../sass/_varisco.scss */
+/* line 68, ../sass/_varisco.scss */
 #block-system-main-menu ul {
   font-size: 4em;
   font-size: 4.5vw;
@@ -2572,58 +2614,58 @@ body {
   padding: 0 0 0 10px;
   text-transform: uppercase;
 }
-/* line 100, ../sass/_varisco.scss */
+/* line 76, ../sass/_varisco.scss */
 #block-system-main-menu ul li {
   list-style: none;
   list-style-position: outside;
 }
-/* line 103, ../sass/_varisco.scss */
+/* line 79, ../sass/_varisco.scss */
 #block-system-main-menu ul li a {
   color: #717272;
   text-decoration: none;
 }
-/* line 107, ../sass/_varisco.scss */
+/* line 83, ../sass/_varisco.scss */
 #block-system-main-menu ul li a:hover, #block-system-main-menu ul li a.active-trail {
   color: #DA6A27;
 }
 
-/* line 114, ../sass/_varisco.scss */
+/* line 90, ../sass/_varisco.scss */
 .mean-container .mean-bar {
   background: none repeat scroll 0 0 transparent;
 }
-/* line 117, ../sass/_varisco.scss */
+/* line 93, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 119, ../sass/_varisco.scss */
+/* line 95, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span {
   background: none repeat scroll 0 0 #FFFFFF;
   display: block;
 }
-/* line 123, ../sass/_varisco.scss */
+/* line 99, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span.mean-head {
   background: none repeat scroll 0 0 transparent;
   color: #FFFFFF;
 }
-/* line 128, ../sass/_varisco.scss */
+/* line 104, ../sass/_varisco.scss */
 .mean-container .mean-nav {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 130, ../sass/_varisco.scss */
+/* line 106, ../sass/_varisco.scss */
 .mean-container .mean-nav h2 {
   color: #FFFFFF;
 }
-/* line 133, ../sass/_varisco.scss */
+/* line 109, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a {
   background: none repeat scroll 0 0 #717272;
   color: #FFFFFF;
 }
-/* line 137, ../sass/_varisco.scss */
+/* line 113, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a:hover {
   background: none repeat scroll 0 0 #717272;
   color: #DA6A27;
 }
-/* line 141, ../sass/_varisco.scss */
+/* line 117, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a.mean-expand:hover {
   background: none repeat scroll 0 0 #717272;
 }
