--- a/css/styles.css
+++ b/css/styles.css
@@ -716,48 +716,15 @@ table {
     padding-top: 1em;
   }
 
-  /* line 112, ../sass/layouts/_responsive.scss */
-  .header__site-name {
-    font-size: 1em;
-    font-size: 1vw;
-    line-height: 1em;
-    font-weight: normal;
-    margin-bottom: 0.5em;
-  }
-
-  /* line 119, ../sass/layouts/_responsive.scss */
-  #block-block-1 {
-    font-size: 1em;
-    font-size: 1vw;
-    padding-left: 10px;
-  }
-  /* line 123, ../sass/layouts/_responsive.scss */
-  #block-block-1 p {
-    color: #494849;
-    font-weight: bold;
-    line-height: 1.25em;
-    margin: 0;
-    padding: 0;
-  }
-  /* line 130, ../sass/layouts/_responsive.scss */
-  #block-block-1 .studio-address {
-    font-size: 0.74em;
-    font-size: 0.74vw;
-  }
-  /* line 138, ../sass/layouts/_responsive.scss */
-  #block-block-1 .studio-email a {
-    color: #C15D21;
-  }
-
   /**
    * The layout when there is only one sidebar, the left one.
    */
-  /* line 147, ../sass/layouts/_responsive.scss */
+  /* line 115, ../sass/layouts/_responsive.scss */
   .sidebar-first {
     /* Span 2 columns, starting in 2nd column from left. */
     /* Span 1 column, starting in 1st column from left. */
   }
-  /* line 149, ../sass/layouts/_responsive.scss */
+  /* line 117, ../sass/layouts/_responsive.scss */
   .sidebar-first #content {
     float: left;
     width: 66.66667%;
@@ -772,7 +739,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 154, ../sass/layouts/_responsive.scss */
+  /* line 122, ../sass/layouts/_responsive.scss */
   .sidebar-first .region-sidebar-first {
     float: left;
     width: 33.33333%;
@@ -791,12 +758,12 @@ table {
   /**
    * The layout when there is only one sidebar, the right one.
    */
-  /* line 162, ../sass/layouts/_responsive.scss */
+  /* line 130, ../sass/layouts/_responsive.scss */
   .sidebar-second {
     /* Span 2 columns, starting in 1st column from left. */
     /* Span 1 column, starting in 3rd column from left. */
   }
-  /* line 164, ../sass/layouts/_responsive.scss */
+  /* line 132, ../sass/layouts/_responsive.scss */
   .sidebar-second #content {
     float: left;
     width: 66.66667%;
@@ -811,7 +778,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 169, ../sass/layouts/_responsive.scss */
+  /* line 137, ../sass/layouts/_responsive.scss */
   .sidebar-second .region-sidebar-second {
     float: left;
     width: 33.33333%;
@@ -830,13 +797,13 @@ table {
   /**
    * The layout when there are two sidebars.
    */
-  /* line 177, ../sass/layouts/_responsive.scss */
+  /* line 145, ../sass/layouts/_responsive.scss */
   .two-sidebars {
     /* Span 2 columns, starting in 2nd column from left. */
     /* Span 1 column, starting in 1st column from left. */
     /* Start a new row and span all 3 columns. */
   }
-  /* line 179, ../sass/layouts/_responsive.scss */
+  /* line 147, ../sass/layouts/_responsive.scss */
   .two-sidebars #content {
     float: left;
     width: 66.66667%;
@@ -851,7 +818,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 184, ../sass/layouts/_responsive.scss */
+  /* line 152, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-first {
     float: left;
     width: 33.33333%;
@@ -866,7 +833,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 189, ../sass/layouts/_responsive.scss */
+  /* line 157, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second {
     float: left;
     width: 100%;
@@ -897,7 +864,7 @@ table {
   .two-sidebars .region-sidebar-second:after {
     clear: both;
   }
-  /* line 195, ../sass/layouts/_responsive.scss */
+  /* line 163, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second .block {
     padding-left: 10px;
     padding-right: 10px;
@@ -907,7 +874,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 199, ../sass/layouts/_responsive.scss */
+  /* line 167, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second .block:nth-child(3n+1) {
     float: left;
     width: 33.33333%;
@@ -923,7 +890,7 @@ table {
     *word-wrap: break-word;
     clear: left;
   }
-  /* line 204, ../sass/layouts/_responsive.scss */
+  /* line 172, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second .block:nth-child(3n+2) {
     float: left;
     width: 33.33333%;
@@ -938,7 +905,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 208, ../sass/layouts/_responsive.scss */
+  /* line 176, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second .block:nth-child(3n) {
     float: left;
     width: 33.33333%;
@@ -954,7 +921,7 @@ table {
     *word-wrap: break-word;
   }
 
-  /* line 214, ../sass/layouts/_responsive.scss */
+  /* line 182, ../sass/layouts/_responsive.scss */
   .views-responsive-grid {
     padding-left: 10px;
     padding-right: 10px;
@@ -976,12 +943,12 @@ table {
     clear: both;
   }
 
-  /* line 219, ../sass/layouts/_responsive.scss */
+  /* line 187, ../sass/layouts/_responsive.scss */
   .views-responsive-grid .views-row {
     clear: left;
   }
 
-  /* line 222, ../sass/layouts/_responsive.scss */
+  /* line 190, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-2 {
     *position: relative;
     *zoom: 1;
@@ -999,7 +966,7 @@ table {
   .views-responsive-grid.views-columns-2:after {
     clear: both;
   }
-  /* line 225, ../sass/layouts/_responsive.scss */
+  /* line 193, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-2 .views-column-1 {
     float: left;
     width: 50%;
@@ -1014,7 +981,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 228, ../sass/layouts/_responsive.scss */
+  /* line 196, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-2 .views-column-2 {
     float: left;
     width: 50%;
@@ -1030,7 +997,7 @@ table {
     *word-wrap: break-word;
   }
 
-  /* line 232, ../sass/layouts/_responsive.scss */
+  /* line 200, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 {
     *position: relative;
     *zoom: 1;
@@ -1048,7 +1015,7 @@ table {
   .views-responsive-grid.views-columns-3:after {
     clear: both;
   }
-  /* line 235, ../sass/layouts/_responsive.scss */
+  /* line 203, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 .views-column-1 {
     float: left;
     width: 33.33333%;
@@ -1063,7 +1030,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 238, ../sass/layouts/_responsive.scss */
+  /* line 206, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 .views-column-2 {
     float: left;
     width: 33.33333%;
@@ -1078,7 +1045,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 241, ../sass/layouts/_responsive.scss */
+  /* line 209, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 .views-column-3 {
     float: left;
     width: 33.33333%;
@@ -1094,7 +1061,7 @@ table {
     *word-wrap: break-word;
   }
 
-  /* line 245, ../sass/layouts/_responsive.scss */
+  /* line 213, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 {
     *position: relative;
     *zoom: 1;
@@ -1117,7 +1084,7 @@ table {
   .views-responsive-grid.views-columns-4:after {
     clear: both;
   }
-  /* line 249, ../sass/layouts/_responsive.scss */
+  /* line 217, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-1 {
     float: left;
     width: 50%;
@@ -1132,7 +1099,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 252, ../sass/layouts/_responsive.scss */
+  /* line 220, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-2 {
     float: left;
     width: 50%;
@@ -1147,7 +1114,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 255, ../sass/layouts/_responsive.scss */
+  /* line 223, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-3 {
     float: left;
     width: 50%;
@@ -1163,7 +1130,7 @@ table {
     *word-wrap: break-word;
     clear: left;
   }
-  /* line 259, ../sass/layouts/_responsive.scss */
+  /* line 227, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-4 {
     float: left;
     width: 50%;
@@ -1183,13 +1150,13 @@ table {
  * Use 5 grid columns for larger screens.
  */
 @media all and (min-width: 960px) {
-  /* line 271, ../sass/layouts/_responsive.scss */
+  /* line 239, ../sass/layouts/_responsive.scss */
   .masonry-item {
     padding: 10px;
     width: 20%;
   }
 
-  /* line 275, ../sass/layouts/_responsive.scss */
+  /* line 243, ../sass/layouts/_responsive.scss */
   #page {
     margin-left: 20px;
     margin-right: 20px;
@@ -1197,60 +1164,27 @@ table {
     margin-top: 20px;
   }
 
-  /* line 282, ../sass/layouts/_responsive.scss */
+  /* line 250, ../sass/layouts/_responsive.scss */
   #main {
     padding-top: 1em;
   }
 
-  /* line 285, ../sass/layouts/_responsive.scss */
+  /* line 253, ../sass/layouts/_responsive.scss */
   .region-sidebar-first {
     position: relative;
     top: auto;
     left: auto;
   }
 
-  /* line 290, ../sass/layouts/_responsive.scss */
-  .header__site-name {
-    font-size: 1em;
-    font-size: 1vw;
-    line-height: 1em;
-    font-weight: normal;
-    margin-bottom: 0.5em;
-  }
-
-  /* line 297, ../sass/layouts/_responsive.scss */
-  #block-block-1 {
-    font-size: 1em;
-    font-size: 1vw;
-    padding-left: 10px;
-  }
-  /* line 301, ../sass/layouts/_responsive.scss */
-  #block-block-1 p {
-    color: #494849;
-    font-weight: bold;
-    line-height: 1.25em;
-    margin: 0;
-    padding: 0;
-  }
-  /* line 308, ../sass/layouts/_responsive.scss */
-  #block-block-1 .studio-address {
-    font-size: 0.74em;
-    font-size: 0.74vw;
-  }
-  /* line 316, ../sass/layouts/_responsive.scss */
-  #block-block-1 .studio-email a {
-    color: #C15D21;
-  }
-
   /**
    * The layout when there is only one sidebar, the left one.
    */
-  /* line 329, ../sass/layouts/_responsive.scss */
+  /* line 266, ../sass/layouts/_responsive.scss */
   .sidebar-first {
     /* Span 4 columns, starting in 2nd column from left. */
     /* Span 1 column, starting in 1st column from left. */
   }
-  /* line 331, ../sass/layouts/_responsive.scss */
+  /* line 268, ../sass/layouts/_responsive.scss */
   .sidebar-first #content {
     float: left;
     width: 80%;
@@ -1265,7 +1199,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 336, ../sass/layouts/_responsive.scss */
+  /* line 273, ../sass/layouts/_responsive.scss */
   .sidebar-first .region-sidebar-first {
     position: fixed;
     float: left;
@@ -1285,12 +1219,12 @@ table {
   /**
    * The layout when there is only one sidebar, the right one.
    */
-  /* line 345, ../sass/layouts/_responsive.scss */
+  /* line 282, ../sass/layouts/_responsive.scss */
   .sidebar-second {
     /* Span 4 columns, starting in 1st column from left. */
     /* Span 1 column, starting in 5th column from left. */
   }
-  /* line 347, ../sass/layouts/_responsive.scss */
+  /* line 284, ../sass/layouts/_responsive.scss */
   .sidebar-second #content {
     float: left;
     width: 80%;
@@ -1305,7 +1239,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 352, ../sass/layouts/_responsive.scss */
+  /* line 289, ../sass/layouts/_responsive.scss */
   .sidebar-second .region-sidebar-second {
     float: left;
     width: 20%;
@@ -1324,13 +1258,13 @@ table {
   /**
    * The layout when there are two sidebars.
    */
-  /* line 360, ../sass/layouts/_responsive.scss */
+  /* line 297, ../sass/layouts/_responsive.scss */
   .two-sidebars {
     /* Span 3 columns, starting in 2nd column from left. */
     /* Span 1 column, starting in 1st column from left. */
     /* Span 1 column, starting in 5th column from left. */
   }
-  /* line 362, ../sass/layouts/_responsive.scss */
+  /* line 299, ../sass/layouts/_responsive.scss */
   .two-sidebars #content {
     float: left;
     width: 60%;
@@ -1345,7 +1279,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 367, ../sass/layouts/_responsive.scss */
+  /* line 304, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-first {
     float: left;
     width: 20%;
@@ -1360,7 +1294,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 372, ../sass/layouts/_responsive.scss */
+  /* line 309, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second {
     float: left;
     width: 20%;
@@ -1376,7 +1310,7 @@ table {
     *word-wrap: break-word;
   }
 
-  /* line 377, ../sass/layouts/_responsive.scss */
+  /* line 314, ../sass/layouts/_responsive.scss */
   .views-responsive-grid {
     padding-left: 10px;
     padding-right: 10px;
@@ -1398,12 +1332,12 @@ table {
     clear: both;
   }
 
-  /* line 382, ../sass/layouts/_responsive.scss */
+  /* line 319, ../sass/layouts/_responsive.scss */
   .views-responsive-grid .views-row {
     clear: left;
   }
 
-  /* line 385, ../sass/layouts/_responsive.scss */
+  /* line 322, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-2 {
     *position: relative;
     *zoom: 1;
@@ -1421,7 +1355,7 @@ table {
   .views-responsive-grid.views-columns-2:after {
     clear: both;
   }
-  /* line 388, ../sass/layouts/_responsive.scss */
+  /* line 325, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-2 .views-column-1 {
     float: left;
     width: 50%;
@@ -1436,7 +1370,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 391, ../sass/layouts/_responsive.scss */
+  /* line 328, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-2 .views-column-2 {
     float: left;
     width: 50%;
@@ -1452,7 +1386,7 @@ table {
     *word-wrap: break-word;
   }
 
-  /* line 395, ../sass/layouts/_responsive.scss */
+  /* line 332, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 {
     *position: relative;
     *zoom: 1;
@@ -1470,7 +1404,7 @@ table {
   .views-responsive-grid.views-columns-3:after {
     clear: both;
   }
-  /* line 398, ../sass/layouts/_responsive.scss */
+  /* line 335, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 .views-column-1 {
     float: left;
     width: 33.33333%;
@@ -1485,7 +1419,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 401, ../sass/layouts/_responsive.scss */
+  /* line 338, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 .views-column-2 {
     float: left;
     width: 33.33333%;
@@ -1500,7 +1434,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 404, ../sass/layouts/_responsive.scss */
+  /* line 341, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-3 .views-column-3 {
     float: left;
     width: 33.33333%;
@@ -1516,7 +1450,7 @@ table {
     *word-wrap: break-word;
   }
 
-  /* line 408, ../sass/layouts/_responsive.scss */
+  /* line 345, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 {
     *position: relative;
     *zoom: 1;
@@ -1534,7 +1468,7 @@ table {
   .views-responsive-grid.views-columns-4:after {
     clear: both;
   }
-  /* line 412, ../sass/layouts/_responsive.scss */
+  /* line 349, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-1 {
     float: left;
     width: 25%;
@@ -1549,7 +1483,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 415, ../sass/layouts/_responsive.scss */
+  /* line 352, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-2 {
     float: left;
     width: 25%;
@@ -1564,7 +1498,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 418, ../sass/layouts/_responsive.scss */
+  /* line 355, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-3 {
     float: left;
     width: 25%;
@@ -1579,7 +1513,7 @@ table {
     box-sizing: border-box;
     *word-wrap: break-word;
   }
-  /* line 421, ../sass/layouts/_responsive.scss */
+  /* line 358, ../sass/layouts/_responsive.scss */
   .views-responsive-grid.views-columns-4 .views-column-4 {
     float: left;
     width: 25%;
@@ -2538,7 +2472,7 @@ body {
 }
 
 /* line 16, ../sass/_varisco.scss */
-#block-system-main-menu h2 {
+.header__site-name, #block-system-main-menu h2 {
   font-size: 1em;
   font-size: 1vw;
   line-height: 1em;
@@ -2601,11 +2535,35 @@ body {
   color: #DA6A27;
 }
 
-/* line 65, ../sass/_varisco.scss */
+/* line 64, ../sass/_varisco.scss */
+#block-block-1 {
+  font-size: 1em;
+  font-size: 1vw;
+  padding-left: 10px;
+}
+/* line 68, ../sass/_varisco.scss */
+#block-block-1 p {
+  color: #494849;
+  font-weight: bold;
+  line-height: 1.25em;
+  margin: 0;
+  padding: 0;
+}
+/* line 75, ../sass/_varisco.scss */
+#block-block-1 .studio-address {
+  font-size: 0.74em;
+  font-size: 0.74vw;
+}
+/* line 83, ../sass/_varisco.scss */
+#block-block-1 .studio-email a {
+  color: #C15D21;
+}
+
+/* line 89, ../sass/_varisco.scss */
 #block-system-main-menu h2 {
   display: none;
 }
-/* line 68, ../sass/_varisco.scss */
+/* line 92, ../sass/_varisco.scss */
 #block-system-main-menu ul {
   font-size: 4em;
   font-size: 4.5vw;
@@ -2614,58 +2572,58 @@ body {
   padding: 0 0 0 10px;
   text-transform: uppercase;
 }
-/* line 76, ../sass/_varisco.scss */
+/* line 100, ../sass/_varisco.scss */
 #block-system-main-menu ul li {
   list-style: none;
   list-style-position: outside;
 }
-/* line 79, ../sass/_varisco.scss */
+/* line 103, ../sass/_varisco.scss */
 #block-system-main-menu ul li a {
   color: #717272;
   text-decoration: none;
 }
-/* line 83, ../sass/_varisco.scss */
+/* line 107, ../sass/_varisco.scss */
 #block-system-main-menu ul li a:hover, #block-system-main-menu ul li a.active-trail {
   color: #DA6A27;
 }
 
-/* line 90, ../sass/_varisco.scss */
+/* line 114, ../sass/_varisco.scss */
 .mean-container .mean-bar {
   background: none repeat scroll 0 0 transparent;
 }
-/* line 93, ../sass/_varisco.scss */
+/* line 117, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 95, ../sass/_varisco.scss */
+/* line 119, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span {
   background: none repeat scroll 0 0 #FFFFFF;
   display: block;
 }
-/* line 99, ../sass/_varisco.scss */
+/* line 123, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span.mean-head {
   background: none repeat scroll 0 0 transparent;
   color: #FFFFFF;
 }
-/* line 104, ../sass/_varisco.scss */
+/* line 128, ../sass/_varisco.scss */
 .mean-container .mean-nav {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 106, ../sass/_varisco.scss */
+/* line 130, ../sass/_varisco.scss */
 .mean-container .mean-nav h2 {
   color: #FFFFFF;
 }
-/* line 109, ../sass/_varisco.scss */
+/* line 133, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a {
   background: none repeat scroll 0 0 #717272;
   color: #FFFFFF;
 }
-/* line 113, ../sass/_varisco.scss */
+/* line 137, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a:hover {
   background: none repeat scroll 0 0 #717272;
   color: #DA6A27;
 }
-/* line 117, ../sass/_varisco.scss */
+/* line 141, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a.mean-expand:hover {
   background: none repeat scroll 0 0 #717272;
 }
